fixed contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -288,7 +288,7 @@ footer {
 fieldset {
     margin: 2em 0;
     padding: 1em 2em;
-    border: solid 1px #ccc;
+    border: solid 1px #615f5f;
     border-radius: 6px;
     min-width: 200px;
 }
@@ -296,7 +296,7 @@ fieldset {
 legend {
     font-size: 1.25em;
     padding: 0 .25em;
-    color: #999;
+    color: #615f5f;
 }
 
 label {
